layout/generic/nsSelection.cpp
@@ -2129,13 +2129,12 @@ nsFrameSelection::PhysicalMove(int16_t aDirection, int16_t aAmount,
       rv = MoveCaret(mapping.direction, aExtend, mapping.amounts[aAmount + 1],
                      eVisual);
     }
-    // And if it was an intra-line move that failed, just move to line-edge
-    // in the given direction.
-    else if (mapping.amounts[aAmount] < eSelectLine) {
-      nsCOMPtr<nsISelectionController> controller = do_QueryInterface(mShell);
-      if (controller) {
-        rv = controller->CompleteMove(mapping.direction == eDirNext, aExtend);
-      }
+    // And if it was a next-word move that failed (which can happen when
+    // eat_space_to_next_word is true, see bug 1153237), then just move forward
+    // to the line-edge.
+    else if (mapping.amounts[aAmount] == eSelectWord &&
+             mapping.direction == eDirNext) {
+      rv = MoveCaret(eDirNext, aExtend, eSelectEndLine, eVisual);
     }
   }
 
